@@ -3,41 +3,32 @@ pipeline {
   stages {
     stage('init') {
       steps {
-        sh 'echo "Install dependencies"'
-        sh 'echo "dependencies installed correctly"'
+        echo 'Installing Dependencies'
       }
     }
 
-    stage('build') {
+    stage('Build') {
       steps {
-        withMaven(globalMavenSettingsConfig: 'tmp.config', globalMavenSettingsFilePath: 'gobal-tmp.config', jdk: 'java8', maven: 'maven-123', mavenSettingsConfig: 'maven.config', mavenSettingsFilePath: '/home/user', mavenOpts: '          -Xmx2048m -Xms1024m -XX:MaxPermSize=512m -Djava.awt.headless=true', mavenLocalRepo: 'local', tempBinDir: '/tmp/bin/dir')
-        readMavenPom(file: 'tmp.xml')
+        echo 'building Maven Package'
       }
     }
 
-    stage('unit test') {
+    stage('Unit Test') {
       steps {
-        echo 'unit test'
+        echo 'Unit Testing'
+        echo 'Integration Test'
       }
     }
 
-    stage('integration test') {
+    stage('Deploy Artifact') {
       steps {
-        echo 'integration test'
+        echo 'Deploy Artifact'
       }
     }
 
-    stage('beta deploy') {
-      steps {
-        echo 'beta deploy'
-      }
-    }
-
-    stage('prod deploy') {
-      steps {
-        echo 'prod deploy'
-      }
-    }
-
+  }
+  environment {
+    JenkinsRole = 'arn:aws:iam::000000000000:role/tmp-role-presto'
+    environment = 'test'
   }
 }
